--- a/iphone/Maps/LocalizedStrings/id.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/id.lproj/Localizable.strings
@@ -620,9 +620,6 @@
 /* Settings: Send feedback button and dialog title */
 "feedback" = "Umpan balik";
 
-/* Settings: "Send general feedback" button */
-"feedback_general" = "General Feedback";
-
 /* Text in menu */
 "subscribe_to_news" = "Berlangganan berita kami";
 
@@ -1652,7 +1649,8 @@
 
 "booking_filters_reset" = "Atur ulang";
 
-"booking_filters_rating" = "Peringkat";
+/* Beginning from a particular value and */
+"booking_filters_rating" = "Peringkat dari";
 
 "booking_filters_rating_any" = "Apa saja";
 
@@ -1700,7 +1698,8 @@
 
 "dialog_taxi_error" = "Memesan taksi untuk sementara tidak tersedia.";
 
-"advertisement" = "Iklan";
+/* Abbreviated for all languages. */
+"advertisement" = "AD";
 
 "mobile_data_dialog" = "Gunakan internet seluler untuk memperlihatkan informasi terperinci?";
 
@@ -1835,10 +1834,6 @@
 
 "whatsnew_driving_style_message" = "Mode navigasi mobil menjadi semakin mudah digunakan.";
 
-"whatsnew_transliteration_title" = "Transliteration";
-
-"whatsnew_transliteration_message" = "Transliteration message";
-
 "more_on_bookingcom" = "Selengkapnya di Booking.com";
 
 "details_on_bookingcom" = "Perincian di Booking.com";
@@ -1851,15 +1846,15 @@
 
 "booking_search" = "Booking.com";
 
-"whats_new_auto_update_updating_maps" = "Updating maps";
+"whats_new_auto_update_updating_maps" = "Memperbarui peta";
 
-"whats_new_auto_update_title" = "Update your downloaded maps";
+"whats_new_auto_update_title" = "Perbarui peta yang sudah Anda unduh";
 
-"whats_new_auto_update_message" = "Update maps supports information about objects in the current state";
+"whats_new_auto_update_message" = "Memperbarui peta membuat informasi tentang objek tetap terkini";
 
-"whats_new_auto_update_button_size" = "Update (%s)";
+"whats_new_auto_update_button_size" = "Pembaruan (%s)";
 
-"whats_new_auto_update_button_later" = "Manually update later";
+"whats_new_auto_update_button_later" = "Perbarui secara manual nanti";
 
 "search_hotel_filter_apartment" = "Apartemen";
 
@@ -1877,8 +1872,25 @@
 
 "search_hotel_filter_motel" = "Motel";
 
-"create_campaign_button" = "Create ad campaign";
+"create_campaign_button" = "Klaim bisnis ini";
 
-"view_campaign_button" = "View ad campagain";
+"view_campaign_button" = "Bisnis diiklankan";
 
-"search_hotel_filters_type" = "Type";
+"search_hotel_filters_type" = "Jenis";
+
+/* Settings: "Send general feedback" button */
+"feedback_general" = "Umpan Balik Umum";
+
+"on" = "On";
+
+"off" = "Mati";
+
+"prefs_languages_information" = "Kami menggunakan TTS sistem untuk petunjuk suara. Banyak perangkat Android menggunakan Google TTS, Anda dapat mengunduhnya dari Google Play (https://play.google.com/store/apps/details?id=com.google.android.tts)";
+
+"prefs_languages_information_off" = "Untuk bahasa Arab, Yunani, dan Romania, Anda mungkin perlu menginstal TTS tambahan (karena Google TTS belum mendukung bahasa-bahasa ini) dari Google Play, seperti Vocalizer TTS atau SVOX Classics.\nUntuk mengelola pengaturan untuk sintesis suara, pada perangkat Anda buka Settings (Pengaturan) –> Language and input (Bahasa dan input) –> Speech (Tuturan) –> Text to speech output (Output teks ke tuturan). Di sini Anda dapat mengunduh paket bahasa tambahan atau memilih mesin teks ke tuturan yang diinginkan.";
+
+"prefs_languages_information_off_link" = "Untuk informasi selengkapnya, bacalah panduan ini.";
+
+"whatsnew_transliteration_title" = "Transliterasi ke dalam bahasa Latin";
+
+"whatsnew_transliteration_message" = "Jika jalan atau objek tidak memiliki nama dalam bahasa Anda, namanya akan dieja menggunakan alfabet Latin.";
