--- a/iphone/Maps/LocalizedStrings/it.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/it.lproj/Localizable.strings
@@ -620,9 +620,6 @@
 /* Settings: Send feedback button and dialog title */
 "feedback" = "Feedback";
 
-/* Settings: "Send general feedback" button */
-"feedback_general" = "General Feedback";
-
 /* Text in menu */
 "subscribe_to_news" = "Iscriviti alle nostre notizie";
 
@@ -1652,7 +1649,8 @@
 
 "booking_filters_reset" = "Reimposta";
 
-"booking_filters_rating" = "Voto";
+/* Beginning from a particular value and */
+"booking_filters_rating" = "Voto da";
 
 "booking_filters_rating_any" = "Qualsiasi";
 
@@ -1700,7 +1698,8 @@
 
 "dialog_taxi_error" = "La chiamata taxi è temporaneamente non disponibile.";
 
-"advertisement" = "Annuncio";
+/* Abbreviated for all languages. */
+"advertisement" = "AD";
 
 "mobile_data_dialog" = "Usare l'Internet mobile per mostrare le informazioni dettagliate?";
 
@@ -1835,10 +1834,6 @@
 
 "whatsnew_driving_style_message" = "Modalità di navigazione in auto più semplice da usare.";
 
-"whatsnew_transliteration_title" = "Transliteration";
-
-"whatsnew_transliteration_message" = "Transliteration message";
-
 "more_on_bookingcom" = "Altro su Booking.com";
 
 "details_on_bookingcom" = "Dettagli su Booking.com";
@@ -1851,15 +1846,15 @@
 
 "booking_search" = "Booking.com";
 
-"whats_new_auto_update_updating_maps" = "Updating maps";
+"whats_new_auto_update_updating_maps" = "Aggiornamento mappe";
 
-"whats_new_auto_update_title" = "Update your downloaded maps";
+"whats_new_auto_update_title" = "Aggiorna le mappe scaricate";
 
-"whats_new_auto_update_message" = "Update maps supports information about objects in the current state";
+"whats_new_auto_update_message" = "Aggiornamento mappe mantiene aggiornate le informazioni sugli oggetti";
 
-"whats_new_auto_update_button_size" = "Update (%s)";
+"whats_new_auto_update_button_size" = "Aggiorna (%s)";
 
-"whats_new_auto_update_button_later" = "Manually update later";
+"whats_new_auto_update_button_later" = "Aggiorna manualmente più tardi";
 
 "search_hotel_filter_apartment" = "Residence";
 
@@ -1877,8 +1872,25 @@
 
 "search_hotel_filter_motel" = "Motel";
 
-"create_campaign_button" = "Create ad campaign";
+"create_campaign_button" = "Rivendica questa attività";
 
-"view_campaign_button" = "View ad campagain";
+"view_campaign_button" = "Attività pubblicizzata";
 
-"search_hotel_filters_type" = "Type";
+"search_hotel_filters_type" = "Tipo";
+
+/* Settings: "Send general feedback" button */
+"feedback_general" = "Feedback generale";
+
+"on" = "On";
+
+"off" = "Off";
+
+"prefs_languages_information" = "Usiamo il TTS di sistema per le istruzioni vocali. Molti dispositivi Android utilizzano Google TTS, che puoi scaricare o aggiornare da Google Play (https://play.google.com/store/apps/details?id=com.google.android.tts)";
+
+"prefs_languages_information_off" = "Per l'arabo, il greco e il rumeno, potrebbe essere necessario installare un servizio TTS aggiuntivo (poiché Google TTS non supporta ancora queste lingue) da Google Play, ad esempio Vocalizer TTS o SVOX Classics.\nPer gestire le impostazioni di sintesi vocale, dal tuo dispositivo apri Impostazioni –> Lingua e input –> Riconoscimento vocale –> Output sintesi vocale. Qui puoi scaricare il language pack aggiuntivo o selezionare il tuo motore di sintesi vocale preferito.";
+
+"prefs_languages_information_off_link" = "Per maggiori informazioni, consulta questa guida.";
+
+"whatsnew_transliteration_title" = "Traslitterazione in latino";
+
+"whatsnew_transliteration_message" = "Se una strada o un oggetto non ha un nome nella tua lingua, tale nome sarà scritto utilizzando l'alfabeto latino.";
