--- a/iphone/Maps/LocalizedStrings/ro.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ro.lproj/Localizable.strings
@@ -620,9 +620,6 @@
 /* Settings: Send feedback button and dialog title */
 "feedback" = "Feedback";
 
-/* Settings: "Send general feedback" button */
-"feedback_general" = "General Feedback";
-
 /* Text in menu */
 "subscribe_to_news" = "Abonați-vă la știrile noastre";
 
@@ -1652,7 +1649,8 @@
 
 "booking_filters_reset" = "Resetare";
 
-"booking_filters_rating" = "Clasificare";
+/* Beginning from a particular value and */
+"booking_filters_rating" = "Evaluări de la";
 
 "booking_filters_rating_any" = "Oricare";
 
@@ -1700,7 +1698,8 @@
 
 "dialog_taxi_error" = "Comandarea unui taxi este momentan indisponibilă.";
 
-"advertisement" = "Reclamă";
+/* Abbreviated for all languages. */
+"advertisement" = "AD";
 
 "mobile_data_dialog" = "Folosiți internetul mobil pentru a afişa informaţii detaliate?";
 
@@ -1835,10 +1834,6 @@
 
 "whatsnew_driving_style_message" = "Modul de navigare din mașină este acum mai ușor de utilizat.";
 
-"whatsnew_transliteration_title" = "Transliteration";
-
-"whatsnew_transliteration_message" = "Transliteration message";
-
 "more_on_bookingcom" = "Mai multe pe Booking.com";
 
 "details_on_bookingcom" = "Detalii pe Booking.com";
@@ -1851,15 +1846,15 @@
 
 "booking_search" = "Booking.com";
 
-"whats_new_auto_update_updating_maps" = "Updating maps";
+"whats_new_auto_update_updating_maps" = "Se actualizează hărțile";
 
-"whats_new_auto_update_title" = "Update your downloaded maps";
+"whats_new_auto_update_title" = "Actualizați hărțile descărcate";
 
-"whats_new_auto_update_message" = "Update maps supports information about objects in the current state";
+"whats_new_auto_update_message" = "Actualizarea hărților vă ajută să păstrați actualizate informațiile despre obiecte";
 
-"whats_new_auto_update_button_size" = "Update (%s)";
+"whats_new_auto_update_button_size" = "Actualizare (%s)";
 
-"whats_new_auto_update_button_later" = "Manually update later";
+"whats_new_auto_update_button_later" = "Actualizare manuală mai târziu";
 
 "search_hotel_filter_apartment" = "Apartamente";
 
@@ -1877,8 +1872,25 @@
 
 "search_hotel_filter_motel" = "Motel";
 
-"create_campaign_button" = "Create ad campaign";
+"create_campaign_button" = "Revendicați această afacere";
 
-"view_campaign_button" = "View ad campagain";
+"view_campaign_button" = "Afacerea este promovată";
 
-"search_hotel_filters_type" = "Type";
+"search_hotel_filters_type" = "Tip";
+
+/* Settings: "Send general feedback" button */
+"feedback_general" = "Feedback general";
+
+"on" = "Activat";
+
+"off" = "Dezactivat";
+
+"prefs_languages_information" = "Pentru instrucțiuni vocale utilizăm sistemul TTS. Multe dispozitive cu Android folosesc Google TTS. Puteți descărca sau actualiza aplicația din Google Play (https://play.google.com/store/apps/details?id=com.google.android.tts)";
+
+"prefs_languages_information_off" = "Pentru limbile arabă, greacă și română ar putea fi necesar să instalați alte aplicații TTS (deoarece Google TTS nu oferă încă suport pentru aceste limbi) din Google Play, ca de exemplu Vocalizer TTS sau SVOX Classics.\nPentru setarea sintetizatorului vocal, deschideți pe dispozitiv Setări –> Limbă și introducere –> Voce –> Text. De aici puteți descărca pachete de limbi suplimentare sau selecta motorul preferat de transcriere vocală.";
+
+"prefs_languages_information_off_link" = "Consultați acest ghid pentru informații suplimentare.";
+
+"whatsnew_transliteration_title" = "Transcriere în alfabet latin";
+
+"whatsnew_transliteration_message" = "Dacă o stradă sau un obiect nu are un nume în limba dvs., va fi exprimat utilizând alfabetul latin.";
