--- a/iphone/Maps/LocalizedStrings/zh-Hant.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/zh-Hant.lproj/Localizable.strings
@@ -620,9 +620,6 @@
 /* Settings: Send feedback button and dialog title */
 "feedback" = "意見反應";
 
-/* Settings: "Send general feedback" button */
-"feedback_general" = "一般意見反應";
-
 /* Text in menu */
 "subscribe_to_news" = "訂閱我們的新聞";
 
@@ -1652,7 +1649,8 @@
 
 "booking_filters_reset" = "重設";
 
-"booking_filters_rating" = "評分";
+/* Beginning from a particular value and */
+"booking_filters_rating" = "評分下限";
 
 "booking_filters_rating_any" = "任意";
 
@@ -1700,7 +1698,8 @@
 
 "dialog_taxi_error" = "叫計程車服務暫時無法使用。";
 
-"advertisement" = "廣告";
+/* Abbreviated for all languages. */
+"advertisement" = "AD";
 
 "mobile_data_dialog" = "使用手機網路顯示詳細資訊？";
 
@@ -1835,10 +1834,6 @@
 
 "whatsnew_driving_style_message" = "汽車導航模式更好用。";
 
-"whatsnew_transliteration_title" = "Transliteration";
-
-"whatsnew_transliteration_message" = "Transliteration message";
-
 "more_on_bookingcom" = "Booking.com 上的更多資訊";
 
 "details_on_bookingcom" = "Booking.com 上的詳細資訊";
@@ -1851,15 +1846,15 @@
 
 "booking_search" = "Booking.com";
 
-"whats_new_auto_update_updating_maps" = "Updating maps";
+"whats_new_auto_update_updating_maps" = "更新地圖";
 
-"whats_new_auto_update_title" = "Update your downloaded maps";
+"whats_new_auto_update_title" = "更新您下載的地圖";
 
-"whats_new_auto_update_message" = "Update maps supports information about objects in the current state";
+"whats_new_auto_update_message" = "更新地圖以讓物件資訊保持在最新狀態";
 
-"whats_new_auto_update_button_size" = "Update (%s)";
+"whats_new_auto_update_button_size" = "更新 (%s)";
 
-"whats_new_auto_update_button_later" = "Manually update later";
+"whats_new_auto_update_button_later" = "稍後手動更新";
 
 "search_hotel_filter_apartment" = "公寓";
 
@@ -1875,10 +1870,27 @@
 
 "search_hotel_filter_hotel" = "飯店";
 
-"search_hotel_filter_motel" = "Motel";
+"search_hotel_filter_motel" = "汽車旅館";
 
-"create_campaign_button" = "Create ad campaign";
+"create_campaign_button" = "聲明這是你的公司";
 
-"view_campaign_button" = "View ad campagain";
+"view_campaign_button" = "業務已發出廣告";
 
-"search_hotel_filters_type" = "Type";
+"search_hotel_filters_type" = "類型";
+
+/* Settings: "Send general feedback" button */
+"feedback_general" = "一般反應";
+
+"on" = "開";
+
+"off" = "關";
+
+"prefs_languages_information" = "我們使用系統 TTS 提供語音指示。許多 Android 裝置使用 Google TTS，您可從 Google Play 下載或更新 (https://play.google.com/store/apps/details?id=com.google.android.tts)";
+
+"prefs_languages_information_off" = "對於阿拉伯語、希臘語或羅馬尼亞語，必須從 Google Play 下載 Vocalizer TTS 或 SVOX Classics 等其他 TTS (因為 Google TTS 尚未支援這些語言)。\n若要管理語音合成的設定，請在您的裝置上開啟「設定 –> 語言和輸入 –> 語音 –> 文字轉語音輸出」。您可在此下載其他語言套件，或選擇偏好的文字轉語音引擎。";
+
+"prefs_languages_information_off_link" = "如需更多資訊，請參閱本指南。";
+
+"whatsnew_transliteration_title" = "音譯為拉丁文";
+
+"whatsnew_transliteration_message" = "若街道或物件沒有您語言的名稱，會使用拉丁字母拼出。";
