--- a/android/res/values-es/strings.xml
+++ b/android/res/values-es/strings.xml
@@ -956,7 +956,8 @@
 	<!-- `Filter` is a noun here -->
 	<string name="booking_filters">Filtrar</string>
 	<string name="booking_filters_reset">Restablecer</string>
-	<string name="booking_filters_rating">Clasificación</string>
+	<!-- Beginning from a particular value and -->
+	<string name="booking_filters_rating">Con calificación desde</string>
 	<string name="booking_filters_rating_any">Cualquier</string>
 	<string name="booking_filters_ragting_good">Bueno</string>
 	<string name="booking_filters_rating_very_good">Muy bueno</string>
@@ -982,7 +983,6 @@
 	<string name="whatsnew_uber_message">¡Pide un taxi Uber directamente desde la aplicación!</string>
 	<string name="dialog_taxi_offline">La opción para solicitar un taxi no se encuentra disponible en el modo sin conexión.</string>
 	<string name="dialog_taxi_error">La opción para solicitar un taxi se encuentra temporalmente no disponible.</string>
-	<string name="advertisement">Anuncio</string>
 	<string name="mobile_data_dialog">¿Usar Internet móvil para mostrar información detallada?</string>
 	<string name="mobile_data_option_always">Usar siempre</string>
 	<string name="mobile_data_option_today">Solo hoy</string>
@@ -1059,6 +1059,11 @@
 	<string name="reviews_on_bookingcom">Más valoraciones en Booking.com</string>
 	<string name="offline_place_page_more_information">Conéctese a internet para obtener más información sobre este lugar.</string>
 	<string name="failed_load_information">No se ha podido cargar la información.</string>
+	<string name="whats_new_auto_update_updating_maps">Actualizando mapas</string>
+	<string name="whats_new_auto_update_title">Actualice sus mapas descargados</string>
+	<string name="whats_new_auto_update_message">La actualización de mapas mantiene actualizada la información sobre objetos</string>
+	<string name="whats_new_auto_update_button_size">Actualizar (%s)</string>
+	<string name="whats_new_auto_update_button_later">Actualizar más tarde de forma manual</string>
 	<string name="search_hotel_filter_apartment">Apartamentos</string>
 	<string name="search_hotel_filter_camp_site">Campamento</string>
 	<string name="search_hotel_filter_chalet">Chalé</string>
@@ -1066,4 +1071,17 @@
 	<string name="search_hotel_filter_hostel">Albergue juvenil</string>
 	<string name="search_hotel_filter_resort">Resort</string>
 	<string name="search_hotel_filter_hotel">Hotel</string>
+	<string name="search_hotel_filter_motel">Motel</string>
+	<string name="create_campaign_button">Este negocio es mío</string>
+	<string name="view_campaign_button">Anuncio destacado</string>
+	<string name="search_hotel_filters_type">Tipo</string>
+	<!-- Settings: "Send general feedback" button -->
+	<string name="feedback_general">Opinión general</string>
+	<string name="on">Akt.</string>
+	<string name="off">Desact.</string>
+	<string name="prefs_languages_information">Utilizamos el sistema TTS para las instrucciones de voz. Muchos dispositivos de Android usan Google TTS. Puede descargar o actualizarlo desde Google Play (https://play.google.com/store/apps/details?id=com.google.android.tts)</string>
+	<string name="prefs_languages_information_off">Para los idiomas árabe, griego y rumano, es posible que necesite instalar un TTS adicional (puesto que Google TTS aún no incluye estos idiomas) desde Google Play, como Vocalizer TTS o SVOX Classics.\nPara administrar los ajustes de síntesis del habla, abra los Ajustes de su dispositivo –&gt; Idioma e introducción –&gt; Voz –&gt; Opciones texto a voz. En este menú puede descargar un paquete de idioma especial o seleccionar un motor existente de conversión de texto a voz.</string>
+	<string name="prefs_languages_information_off_link">Para obtener más información, consulte esta guía.</string>
+	<string name="whatsnew_transliteration_title">Transliteración al alfabeto latino</string>
+	<string name="whatsnew_transliteration_message">Si una calle o un objeto no tiene nombre en su idioma, se escribirá con el alfabeto latino.</string>
 </resources>
