--- a/iphone/Maps/LocalizedStrings/da.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/da.lproj/Localizable.strings
@@ -620,9 +620,6 @@
 /* Settings: Send feedback button and dialog title */
 "feedback" = "Feedback";
 
-/* Settings: "Send general feedback" button */
-"feedback_general" = "General Feedback";
-
 /* Text in menu */
 "subscribe_to_news" = "Abonnér på vores nyheder";
 
@@ -1652,7 +1649,8 @@
 
 "booking_filters_reset" = "Nulstil";
 
-"booking_filters_rating" = "Vurdering";
+/* Beginning from a particular value and */
+"booking_filters_rating" = "Vurdering fra";
 
 "booking_filters_rating_any" = "Hvilken som helst";
 
@@ -1700,7 +1698,8 @@
 
 "dialog_taxi_error" = "Bestilling af en taxi er ikke muligt lige nu.";
 
-"advertisement" = "Annonce";
+/* Abbreviated for all languages. */
+"advertisement" = "AD";
 
 "mobile_data_dialog" = "Skal mobilt internet bruges til at vise detaljerede oplysninger?";
 
@@ -1835,10 +1834,6 @@
 
 "whatsnew_driving_style_message" = "Bilnavigationstilstand er blevet lettere at bruge.";
 
-"whatsnew_transliteration_title" = "Transliteration";
-
-"whatsnew_transliteration_message" = "Transliteration message";
-
 "more_on_bookingcom" = "Mere på Booking.com";
 
 "details_on_bookingcom" = "Detaljer på Booking.com";
@@ -1851,15 +1846,15 @@
 
 "booking_search" = "Booking.com";
 
-"whats_new_auto_update_updating_maps" = "Updating maps";
+"whats_new_auto_update_updating_maps" = "Opdaterer kort";
 
-"whats_new_auto_update_title" = "Update your downloaded maps";
+"whats_new_auto_update_title" = "Opdater dine downloadede kort";
 
-"whats_new_auto_update_message" = "Update maps supports information about objects in the current state";
+"whats_new_auto_update_message" = "Opdatering af kort sikrer, at oplysningerne om objekter er aktuel";
 
-"whats_new_auto_update_button_size" = "Update (%s)";
+"whats_new_auto_update_button_size" = "Opdater (%s)";
 
-"whats_new_auto_update_button_later" = "Manually update later";
+"whats_new_auto_update_button_later" = "Opdater manuelt senere";
 
 "search_hotel_filter_apartment" = "Lejligheder";
 
@@ -1877,8 +1872,25 @@
 
 "search_hotel_filter_motel" = "Motel";
 
-"create_campaign_button" = "Create ad campaign";
+"create_campaign_button" = "Denne virksomhed tilhører mig";
 
-"view_campaign_button" = "View ad campagain";
+"view_campaign_button" = "Virksomhed er annonceret";
 
 "search_hotel_filters_type" = "Type";
+
+/* Settings: "Send general feedback" button */
+"feedback_general" = "Generel feedback";
+
+"on" = "Til";
+
+"off" = "Fra";
+
+"prefs_languages_information" = "Vi bruger systemets TTS til stemmevejledning. Mange Android-enheder bruger Google TTS, du kan hente eller opdatere det via Google Play (https://play.google.com/store/apps/details?id=com.google.android.tts)";
+
+"prefs_languages_information_off" = "I forbindelse med sprogene arabisk, græsk og rumænsk skal du installere yderligere TTS såsom som Vocalizer TTS eller SVOX Classics fra Google Play (eftersom Google TTS ikke understøtter disse sprog endnu). Hvis du vil administrere indstillinger for talesyntese på enheden, skal du åbne Indstillinger –> Sprog og input –> Tale –> Tekst til tale-output. Her kan du downloade yderligere sprogpakker eller vælge dit foretrukne tekst til tale-program.";
+
+"prefs_languages_information_off_link" = "Se denne vejledning for flere oplysninger.";
+
+"whatsnew_transliteration_title" = "Translitteration til latinsk";
+
+"whatsnew_transliteration_message" = "Hvis en gade eller et objekt ikke har et navn på dit sprog, vil det blive stavet ved hjælp af det latinske alfabet.";
