--- a/iphone/Maps/LocalizedStrings/de.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/de.lproj/Localizable.strings
@@ -620,9 +620,6 @@
 /* Settings: Send feedback button and dialog title */
 "feedback" = "Feedback";
 
-/* Settings: "Send general feedback" button */
-"feedback_general" = "Allgemeine Rückmeldung";
-
 /* Text in menu */
 "subscribe_to_news" = "Abonnieren Sie unsere News";
 
@@ -1652,7 +1649,8 @@
 
 "booking_filters_reset" = "Zurücksetzen";
 
-"booking_filters_rating" = "Bewertung";
+/* Beginning from a particular value and */
+"booking_filters_rating" = "Bewertung von";
 
 "booking_filters_rating_any" = "Alle";
 
@@ -1700,7 +1698,8 @@
 
 "dialog_taxi_error" = "Das Bestellen eines Taxis ist vorübergehend nicht verfügbar.";
 
-"advertisement" = "Werbung";
+/* Abbreviated for all languages. */
+"advertisement" = "AD";
 
 "mobile_data_dialog" = "Mobiles Internet verwenden, um genauere Informationen anzuzeigen?";
 
@@ -1835,10 +1834,6 @@
 
 "whatsnew_driving_style_message" = "Der Modus Autonavigation ist jetzt einfacher zu nutzen.";
 
-"whatsnew_transliteration_title" = "Transliteration";
-
-"whatsnew_transliteration_message" = "Transliteration message";
-
 "more_on_bookingcom" = "Mehr bei Booking.com";
 
 "details_on_bookingcom" = "Einzelheiten bei Booking.com";
@@ -1851,15 +1846,15 @@
 
 "booking_search" = "Booking.com";
 
-"whats_new_auto_update_updating_maps" = "Updating maps";
+"whats_new_auto_update_updating_maps" = "Kartenaktualisierung";
 
-"whats_new_auto_update_title" = "Update your downloaded maps";
+"whats_new_auto_update_title" = "Aktualisieren Sie Ihre heruntergeladenen Karten";
 
-"whats_new_auto_update_message" = "Update maps supports information about objects in the current state";
+"whats_new_auto_update_message" = "Das Aktualisieren der Karten sorgt dafür, dass die Objektinformationen stets auf dem neuesten Stand sind";
 
-"whats_new_auto_update_button_size" = "Update (%s)";
+"whats_new_auto_update_button_size" = "Aktualisieren (%s)";
 
-"whats_new_auto_update_button_later" = "Manually update later";
+"whats_new_auto_update_button_later" = "Später manuell aktualisieren";
 
 "search_hotel_filter_apartment" = "Appartements";
 
@@ -1877,8 +1872,25 @@
 
 "search_hotel_filter_motel" = "Motel";
 
-"create_campaign_button" = "Create ad campaign";
+"create_campaign_button" = "Ist das Ihr Unternehmen?";
 
-"view_campaign_button" = "View ad campagain";
+"view_campaign_button" = "Es wird für das Unternehmen geworben";
 
-"search_hotel_filters_type" = "Type";
+"search_hotel_filters_type" = "Art";
+
+/* Settings: "Send general feedback" button */
+"feedback_general" = "Allgemeines Feedback";
+
+"on" = "An";
+
+"off" = "Aus";
+
+"prefs_languages_information" = "Wir verwenden Text-to-Speech-Systeme für Sprachanweisungen. Viele Android-Geräte nutzen Google-TTS, das können Sie bei Google Play (https://play.google.com/store/apps/details?id=com.google.android.tts) herunterladen oder aktualisieren.";
+
+"prefs_languages_information_off" = "Für Arabisch, Griechisch und Rumänisch müssen Sie möglicherweise zusätzliche TTS-Systeme von Google Play herunterladen und installieren (denn Google-TTS unterstützt diese Sprachen bisher noch nicht), Sie können zum Beispiel Vocalizer TTS oder SVOX Classics verwenden. Um die Einstellungen für Sprachsynthese zu verwalten, gehen Sie auf Ihrem Gerät zu Einstellungen -> Sprache und Eingabe -> Sprache -> Text-to-Speech-Ausgabe. Hier können Sie zusätzliche Sprachpakete herunterladen oder das bevorzugte Versprachlichungsprogramm auswählen.";
+
+"prefs_languages_information_off_link" = "Weitere Informationen finden Sie in dieser Anleitung.";
+
+"whatsnew_transliteration_title" = "Transliteration ins Lateinische";
+
+"whatsnew_transliteration_message" = "Wenn eine Straße oder ein Objekt in Ihrer Sprache keinen Namen hat, wird er mit lateinischen Buchstaben geschrieben.";
