--- a/iphone/Maps/LocalizedStrings/es.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/es.lproj/Localizable.strings
@@ -620,9 +620,6 @@
 /* Settings: Send feedback button and dialog title */
 "feedback" = "Comentarios";
 
-/* Settings: "Send general feedback" button */
-"feedback_general" = "General Feedback";
-
 /* Text in menu */
 "subscribe_to_news" = "Suscríbete a nuestras noticias";
 
@@ -1652,7 +1649,8 @@
 
 "booking_filters_reset" = "Restablecer";
 
-"booking_filters_rating" = "Clasificación";
+/* Beginning from a particular value and */
+"booking_filters_rating" = "Con calificación desde";
 
 "booking_filters_rating_any" = "Cualquier";
 
@@ -1700,7 +1698,8 @@
 
 "dialog_taxi_error" = "La opción para solicitar un taxi se encuentra temporalmente no disponible.";
 
-"advertisement" = "Anuncio";
+/* Abbreviated for all languages. */
+"advertisement" = "AD";
 
 "mobile_data_dialog" = "¿Usar Internet móvil para mostrar información detallada?";
 
@@ -1835,10 +1834,6 @@
 
 "whatsnew_driving_style_message" = "Modo de navegación más fácil de usar.";
 
-"whatsnew_transliteration_title" = "Transliteration";
-
-"whatsnew_transliteration_message" = "Transliteration message";
-
 "more_on_bookingcom" = "Más información en Booking.com";
 
 "details_on_bookingcom" = "Detalles en Booking.com";
@@ -1851,15 +1846,15 @@
 
 "booking_search" = "Booking.com";
 
-"whats_new_auto_update_updating_maps" = "Updating maps";
+"whats_new_auto_update_updating_maps" = "Actualizando mapas";
 
-"whats_new_auto_update_title" = "Update your downloaded maps";
+"whats_new_auto_update_title" = "Actualice sus mapas descargados";
 
-"whats_new_auto_update_message" = "Update maps supports information about objects in the current state";
+"whats_new_auto_update_message" = "La actualización de mapas mantiene actualizada la información sobre objetos";
 
-"whats_new_auto_update_button_size" = "Update (%s)";
+"whats_new_auto_update_button_size" = "Actualizar (%s)";
 
-"whats_new_auto_update_button_later" = "Manually update later";
+"whats_new_auto_update_button_later" = "Actualizar más tarde de forma manual";
 
 "search_hotel_filter_apartment" = "Apartamentos";
 
@@ -1877,8 +1872,25 @@
 
 "search_hotel_filter_motel" = "Motel";
 
-"create_campaign_button" = "Create ad campaign";
+"create_campaign_button" = "Este negocio es mío";
 
-"view_campaign_button" = "View ad campagain";
+"view_campaign_button" = "Anuncio destacado";
 
-"search_hotel_filters_type" = "Type";
+"search_hotel_filters_type" = "Tipo";
+
+/* Settings: "Send general feedback" button */
+"feedback_general" = "Opinión general";
+
+"on" = "Akt.";
+
+"off" = "Desact.";
+
+"prefs_languages_information" = "Utilizamos el sistema TTS para las instrucciones de voz. Muchos dispositivos de Android usan Google TTS. Puede descargar o actualizarlo desde Google Play (https://play.google.com/store/apps/details?id=com.google.android.tts)";
+
+"prefs_languages_information_off" = "Para los idiomas árabe, griego y rumano, es posible que necesite instalar un TTS adicional (puesto que Google TTS aún no incluye estos idiomas) desde Google Play, como Vocalizer TTS o SVOX Classics.\nPara administrar los ajustes de síntesis del habla, abra los Ajustes de su dispositivo –> Idioma e introducción –> Voz –> Opciones texto a voz. En este menú puede descargar un paquete de idioma especial o seleccionar un motor existente de conversión de texto a voz.";
+
+"prefs_languages_information_off_link" = "Para obtener más información, consulte esta guía.";
+
+"whatsnew_transliteration_title" = "Transliteración al alfabeto latino";
+
+"whatsnew_transliteration_message" = "Si una calle o un objeto no tiene nombre en su idioma, se escribirá con el alfabeto latino.";
