--- a/iphone/Maps/LocalizedStrings/fr.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/fr.lproj/Localizable.strings
@@ -620,9 +620,6 @@
 /* Settings: Send feedback button and dialog title */
 "feedback" = "Feedback";
 
-/* Settings: "Send general feedback" button */
-"feedback_general" = "Avis général";
-
 /* Text in menu */
 "subscribe_to_news" = "S'abonner à nos informations";
 
@@ -1652,7 +1649,8 @@
 
 "booking_filters_reset" = "Réinitialiser";
 
-"booking_filters_rating" = "Note";
+/* Beginning from a particular value and */
+"booking_filters_rating" = "Note à partir de";
 
 "booking_filters_rating_any" = "N’importe quel";
 
@@ -1700,7 +1698,8 @@
 
 "dialog_taxi_error" = "La commande d'un taxi est temporairement indisponible.";
 
-"advertisement" = "Publicité";
+/* Abbreviated for all languages. */
+"advertisement" = "AD";
 
 "mobile_data_dialog" = "Utiliser l'Internet mobile pour afficher les informations détaillées?";
 
@@ -1835,10 +1834,6 @@
 
 "whatsnew_driving_style_message" = "Mode de navigation en voiture plus facile à utiliser.";
 
-"whatsnew_transliteration_title" = "Transliteration";
-
-"whatsnew_transliteration_message" = "Transliteration message";
-
 "more_on_bookingcom" = "Plus d'infos sur Booking.com";
 
 "details_on_bookingcom" = "Détails sur Booking.com";
@@ -1851,15 +1846,15 @@
 
 "booking_search" = "Booking.com";
 
-"whats_new_auto_update_updating_maps" = "Updating maps";
+"whats_new_auto_update_updating_maps" = "Mise à jour des cartes";
 
-"whats_new_auto_update_title" = "Update your downloaded maps";
+"whats_new_auto_update_title" = "Mettez à jour vos cartes téléchargées";
 
-"whats_new_auto_update_message" = "Update maps supports information about objects in the current state";
+"whats_new_auto_update_message" = "Actualiser les cartes permet d'actualiser également les informations sur les objets";
 
-"whats_new_auto_update_button_size" = "Update (%s)";
+"whats_new_auto_update_button_size" = "Mettre à jour (%s)";
 
-"whats_new_auto_update_button_later" = "Manually update later";
+"whats_new_auto_update_button_later" = "Mettre à jour manuellement plus tard";
 
 "search_hotel_filter_apartment" = "Appart'hôtel";
 
@@ -1877,8 +1872,25 @@
 
 "search_hotel_filter_motel" = "Motel";
 
-"create_campaign_button" = "Create ad campaign";
+"create_campaign_button" = "Cette entreprise m'appartient";
 
-"view_campaign_button" = "View ad campagain";
+"view_campaign_button" = "L'entreprise est publiée";
 
 "search_hotel_filters_type" = "Type";
+
+/* Settings: "Send general feedback" button */
+"feedback_general" = "Feedback général";
+
+"on" = "On";
+
+"off" = "Off";
+
+"prefs_languages_information" = "Nous utilisons le système TTS pour les instructions vocales. De nombreux appareils Android utilisent Google TTS, vous pouvez le télécharger ou le mettre à jour depuis Google Play (https://play.google.com/store/apps/details?id=com.google.android.tts)";
+
+"prefs_languages_information_off" = "Pour les langues arabe, grecque et roumaine, Il vous faudra peut-être installer un TTS supplémentaire (car Google TTS n'est pas encore compatible avec ces langues) depuis Google Play tel que Vocalizer TTS ou SVOX Classics. Pour gérer les paramètres de synthèse vocale, ouvrez sur votre appareil Paramètres –> Langue et entrée – > Parole – > Texte en parole. Vous pouvez télécharger ici un package de langues supplémentaires ou sélectionner votre logiciel de synthèse vocale préféré.";
+
+"prefs_languages_information_off_link" = "Pour plus d’informations, veuillez consulter ce guide.";
+
+"whatsnew_transliteration_title" = "Translittération en latin";
+
+"whatsnew_transliteration_message" = "Si une rue ou un objet n’a pas de nom dans votre langue, l’alphabet latin sera utilisé pour l'écrire.";
